--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,8 +10,11 @@
 
 body {
     background-color: var(--background) !important;
-    height: 100vh;
-    width: 100vw;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
 }
 
 /* === HEADER === */
@@ -20,7 +23,6 @@ header {
     background-color: var(--header);
     border-bottom: 1px solid lightgray !important;
     filter: drop-shadow(0 2px 1px gray);
-    height: 10vh;
 }
 
 /* Logo */
@@ -62,7 +64,8 @@ header .input-group input {
 /* === MAIN === */
 
 main {
-    height: 90vh;
+    max-width: unset !important;
+    padding: 0 7vw !important;
 }
 
 /* Titre */
@@ -104,7 +107,6 @@ section {
     transition: transform 0.4s ease-in-out;
 }
 
-
 #random-btn img {
     width: 3em;
     filter: invert(99%) sepia(5%) saturate(1143%) hue-rotate(198deg) brightness(118%) contrast(87%);
@@ -136,23 +138,9 @@ section {
     width: 100%;
 }
 
-#bloc-tags span {
-    background-color: var(--button);
-    border-radius: 2em;
-    font-size: 1em;
-    color: var(--background);
-    padding: 0.3em 0.5em;
-    margin-right: 1em;
-}
-
 #bloc-2 {
     height: 30vh;
 }
-
-#map {
-    height: 100%;
-}
-
 
 /* === POLICES === */
 
